--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
     <style>
         body {
             font-family: 'Courier New', Courier, monospace;
-            background-color: #282C34;
-            color: #ABB2BF;
+            background-color: #282A36;
+            color: #F8F8F2;
             margin: 0;
             padding: 0;
-
             display: flex;
-
             flex-direction: column;
+        }
+
+        .container,
+        .container-2 {
+            max-width: 542px;
+            padding: 20px;
+            background-color: #1E1F29;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            font-family: monospace;
+            border-left: 5px solid #268BD2;
+        }
+
+        .container-2:hover {
+            background-color: #44475A;
+            transition: background 0.3s ease-in-out;
         }
 
         .main-container {
@@ -55,25 +69,11 @@
 
         .social-icons a:hover {
             color: #1DA1F2;
-
-        }
-
-        .container,
-        .container-2 {
-            max-width: 542px;
-            padding: 20px;
-            background-color: #1E2127;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            font-family: monospace;
-
         }
 
         .container-2 {
             margin-top: 20px;
-
             text-align: justify;
-
             line-height: 1.6;
         }
 
@@ -217,21 +217,157 @@
         .text-slider-items {
             display: none;
         }
+
+        .tooltip {
+            position: relative;
+            display: inline-block;
+            text-align: center;
+        }
+
+        .tooltip-text {
+            visibility: hidden;
+            width: 120px;
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding: 5px;
+            border-radius: 5px;
+            position: absolute;
+            left: 125%;
+            top: 50%;
+            transform: translateY(-50%);
+            opacity: 0;
+            transition: opacity 0.3s;
+            font-size: 12px;
+            white-space: nowrap;
+        }
+
+        .tooltip:hover .tooltip-text {
+            visibility: visible;
+            opacity: 1;
+        }
     </style>
+    <style scoped>
+        .projects {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .title {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .project-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .project-card {
+            width: 500px;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: white;
+        }
+
+        .project-image {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        .buttons {
+            margin-top: 10px;
+        }
+
+        .btn {
+            display: inline-block;
+            margin: 5px;
+            padding: 8px 15px;
+            background: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .btn:hover {
+            background: #0056b3;
+        }
+
+
+
+
+        .chips {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+
+        .chip {
+            background-color: #007bff;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        .chips {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .chip:hover {
+            background-color: #0056b3;
+        }
+
+        .buttons {
+            margin-top: 20px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-right: 10px;
+            text-decoration: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+
+        .project-title {
+            color: #333;
+        }
+
+        .project-logo {
+            width: 100%;
+            max-width: 200px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+    </style>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"
         crossorigin="anonymous"></script>
-    <!-- FontAwesome para redes y algunos lenguajes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <!-- Devicon para frameworks, librerías y más tecnologías -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Carga Typed.js desde un CDN -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </head>
 
 <body>
+
+
     <div class="main-container">
         <div class="presentation">
             <div class="container">
@@ -256,21 +392,33 @@
             </div>
             <div class="containerVertical">
                 <div class="social-icons">
-                    <a href="https://github.com/nnicolasluna" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/nnicolasluna" target="_blank" class="tooltip">
+                        <i class="fab fa-github"></i>
+                        <span class="tooltip-text">GitHub</span>
+                    </a>
                 </div>
                 <div class="social-icons">
-                    <a href="http://linkedin.com/in/jnlv" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="http://linkedin.com/in/jnlv" target="_blank" class="tooltip">
+                        <i class="fab fa-linkedin"></i>
+                        <span class="tooltip-text">LinkedIn</span>
+                    </a>
                 </div>
                 <div class="social-icons">
-                    <a href="mailto:nnicolasluna@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:nnicolasluna@gmail.com" target="_blank" class="tooltip">
+                        <i class="fas fa-envelope"></i>
+                        <span class="tooltip-text">Enviar Correo</span>
+                    </a>
                 </div>
+
                 <div class="social-icons">
                     <a href="https://docs.google.com/document/d/1ZF6JO828M5K9eh3-ntHGt2mbYmFT8hyuTPdOTvy1m5A/edit?usp=sharingf"
-                        download target="_blank">
+                        download target="_blank" class="tooltip">
                         <i class="fas fa-file-download"></i>
+                        <span class="tooltip-text">Descargar CV</span>
                     </a>
                 </div>
             </div>
+
         </div>
         <div class="container-2">
             <div class="container-head">Who am I?</div>
@@ -315,32 +463,139 @@
         </div>
 
         <div class="container-2">
-            <div class="container-head">Education</div>
-            <div class="experience-images">
-                <img
-                    src="https://scontent.flpb1-2.fna.fbcdn.net/v/t39.30808-6/460834034_560793759947622_6025556637619565084_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=3zl0h2yUy3oQ7kNvgF9EyRl&_nc_oc=AdmuNWZ1WqOby7Av2HqZ-3at5eDhwYZUlheilxocOI1Hkr-lQfxOIMoW6xAKgOJB-vE&_nc_zt=23&_nc_ht=scontent.flpb1-2.fna&_nc_gid=9z7n-RZK-IJfzeNdUjbNlw&oh=00_AYGkkbtRpv1_q1u2-vHA-9Zkm2iC48yO5ii6AEUNUebTTw&oe=67E949BE" />
-                <img
-                    src="https://scontent.flpb1-1.fna.fbcdn.net/v/t39.30808-6/301813363_572545314665377_8783780153677326986_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=gCQoVaWadA4Q7kNvgEqd7EW&_nc_oc=AdmspfjrQ6iDPWtkEYX2_Fj2DviSh4xH2LyGRk3DFHDyxK8gej8f3bL9f8yM04mOTSU&_nc_zt=23&_nc_ht=scontent.flpb1-1.fna&_nc_gid=xU3CzVOLRphYO_iNApdw2Q&oh=00_AYE-LpDhsHD4xEkU9hjT_fdVK2qVMuiDgyVOpaqlrjTsow&oe=67E9530D" />
-                <img
-                    src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/file-uploads/themes/2160361399/settings_images/3117e55-2f00-2883-fc74-4fc8db5ed0db_0fbdb0f7-e5dd-4f79-8100-9b33fa79fdab.png" />
-                <img src="https://s.udemycdn.com/meta/default-meta-image-v2.png" />
+            <div class="container-head">Projects</div>
+            <div class="projects">
+
+
+                <div class="project-card">
+                    <img src="https://github.com/nnicolasluna/FrontEnd-Angular-V2/blob/main/src/assets/gamb.png?raw=true"
+                        alt="Logo NFC" class="project-logo" />
+
+                    <h3 class="project-title">Sistema Financiero NFC</h3>
+                    <p>Desarrollo de un sistema bancario privado para una empresa llamado NFC. Este sistema gestiona
+                        transacciones, registros de clientes, y tareas bancarias esenciales de forma segura y eficiente.
+                    </p>
+                    <h3 class="project-title">Tecnologías utilizadas:</h3>
+                    <div class="chips">
+                        <span class="chip">Angular</span>
+                        <span class="chip">Spring Boot</span>
+                        <span class="chip">PostgreSQL</span>
+                        <span class="chip">Python</span>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="projects">
+
+                <div class="project-card">
+
+                    <img src="https://faceba.eba.com.bo/img/logos/faceba.png" alt="Logo NFC" class="project-logo" />
+
+                    <h3 class="project-title">FACEBA</h3>
+                    <p>Fui responsable del mantenimiento e implementación institucional del sistema FACEBA, un software
+                        consolidado y
+                        probado en entornos de producción. Durante este proceso, me enfoqué en optimizar la eficiencia
+                        operativa del sistema, implementando mejoras clave y asegurando su estabilidad mediante un
+                        exhaustivo proceso de pruebas.
+                    </p>
+                    <h3 class="project-title">Tecnologías utilizadas:</h3>
+                    <div class="chips">
+                        <span class="chip">Vue JS</span>
+                        <span class="chip">Laravel</span>
+                        <span class="chip">MySQL</span>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="projects">
+
+                <div class="project-card">
+
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX6220Sh1ca5x9QpuH8TjoVjV0z0cEeA42wQ&s"
+                        alt="Logo NFC" class="project-logo" />
+
+                    <h3 class="project-title">SISTEMA DE GESTION DE NOTAS - ARMANDO URIA</h3>
+                    <p>Desarrollo e implementación de un sistema para una unidad educativa llamada Armando Escobar Uria,
+                        en cual se integraron distintos roles con diferentes funcionalidades.
+                    </p>
+                    <h3 class="project-title">Tecnologías utilizadas:</h3>
+                    <div class="chips">
+                        <span class="chip">Blade</span>
+                        <span class="chip">Laravel</span>
+                        <span class="chip">MySQL</span>
+                    </div>
+                    <div class="buttons">
+                        <a href="http://github.com/nnicolasluna/School-ArmandoUria" target="_blank"
+                            class="btn">Código</a>
+                    </div>
+                </div>
 
             </div>
         </div>
 
+
     </div>
     <script>
         if ($('.text-slider').length == 1) {
-            var typed_strings = $('.text-slider-items').text(); 
+            var typed_strings = $('.text-slider-items').text();
             var typed = new Typed('.text-slider', {
-                strings: typed_strings.split(','),  
-                typeSpeed: 80,                      
-                loop: true,                         
-                backDelay: 1100,                    
-                backSpeed: 30                       
+                strings: typed_strings.split(','),
+                typeSpeed: 80,
+                loop: true,
+                backDelay: 1100,
+                backSpeed: 30
             });
         }
+
+
     </script>
+
+    <script>
+
+        const projects = [
+            {
+                title: 'Sistema Bancario NFC',
+                description: 'Desarrollo de un sistema bancario privado para una empresa llamado NFC. Este sistema gestiona transacciones, registros de clientes, y tareas bancarias esenciales de forma segura y eficiente.',
+                technologies: 'Angular, Spring Boot, PostgreSQL',
+                role: 'Desarrollador Full-Stack. Implementé la parte de frontend utilizando Angular y trabajé en la lógica de negocio y la integración de base de datos en el backend utilizando Spring Boot y PostgreSQL.',
+                demo: 'enlace-a-demo-del-proyecto',
+                repo: 'enlace-a-repositorio-del-proyecto',
+                image: 'ruta-a-imagen-del-proyecto.jpg'
+            },
+
+        ];
+
+
+        const projectList = document.getElementById('project-list');
+
+
+        projects.forEach(project => {
+            const projectCard = document.createElement('div');
+            projectCard.classList.add('project-card');
+
+            projectCard.innerHTML = `
+                <img src="${project.image}" alt="${project.title}" class="project-image" />
+                <h3>${project.title}</h3>
+                <p>${project.description}</p>
+                <p><strong>Tecnologías utilizadas:</strong> ${project.technologies}</p>
+                <p><strong>Mi rol:</strong> ${project.role}</p>
+                <div class="buttons">
+                    <a href="${project.demo}" target="_blank" class="btn">Demo</a>
+                    <a href="${project.repo}" target="_blank" class="btn">Código</a>
+                </div>
+            `;
+
+
+            projectList.appendChild(projectCard);
+        });
+
+
+  
+
+    </script>
+
 </body>
 
 </html>
